--- a/home.html
+++ b/home.html
@@ -2,109 +2,139 @@
 
 <html lang="en">
 
-    <head>
-        <title>UX/UI Explorers</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>UX/UI Explorers | Home</title>
 
-        <style>
-            html 
-            {
-                font-family: Montserrat;
-                font-size: 18px;
-            }
+    <!-- Custom Style-->
+    <style>
+        html {
+            font-family: Montserrat;
+            font-size: 18px;
+        }
 
-            body 
-            {
-                font-weight: 400;
-                font-style:normal;
-                text-decoration: none;
-                text-transform: none;
-                letter-spacing: normal;
-                line-height: 1.55;
-                color: var(--gray-black);
-                background-color: var(--gray-white);
-                margin:0;
-            }
-
+        body {
+            font-weight: 400;
+            font-style: normal;
+            text-decoration: none;
+            text-transform: none;
+            letter-spacing: normal;
+            line-height: 1.55;
+            color: var(--gray-black);
+            background-color: var(--white);
+            margin: 0;
+        }
     </style>
+    <link rel ="stylesheet" href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" />
+    <link rel="stylesheet" href="css/style.css" />
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    />
+</head>
 
-    <link rel="stylesheet" href="./style.css" />
+<body>
 
-    </head>
+    <!---------------------- Navigation ---------------------->
+    <nav class="nav">
+        <div class="nav-menu flex-row">
+            <div class="nav-brand">
+                <a href="#" class="text-gray">
+                    <img src="assets/uxuiTextLogo.png"
+                         alt="UX/UI Explorers"
+                         class="textlogo"
+                         onmouseover="this.src='assets/uxuiTextLogoh.png'"
+                         onmouseout="this.src='assets/uxuiTextLogo.png'" />
+                    <img src="assets/uxuiPenLogo.png"
+                         alt="UX/UI Explorers"
+                         class="penlogo"
+                         onmouseover="this.src='assets/uxuiPenLogoh.png'"
+                         onmouseout="this.src='assets/uxuiPenLogo.png'" />
+                </a>
+            </div>
+            <button class="hamburger" id="hamburger">
 
-    <body>
-        <div>
-            <link href="./layout.css" rel="stylesheet" />
-
-            <div class="container">
-                <!-- Header -->
-                <div data-role="Header" class="navbar-container">
-                    <div class="navbar">
-
-                        <!-- Left Logos -->
-                        <a href="/" class="link">
-                            <div class="logo-contrainer">
-
-                                <img src="assets/uxuiTextLogo.png"
-                                     alt="UX/UI Explorers"
-                                     class="textlogo" />
-
-                                <img src="assets/uxuiPenLogo.png"
-                                     alt="UX/UI Explorers"
-                                     class="penlogo" />
-
-                            </div>
-                        </a>
-
-                        <!-- Page Links -->
-                        <div class="links-container">
-                            <span class="nav-text anchor">Home</span>
-                            <span class="nav-text anchor">About</span>
-                            <span class="nav-text anchor">Contact</span>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- Footer -->
-                <div class="footer-container"></div>
-                <div class="footer">
-                    <div class="social-links">
-
-                        <!-- Email -->
-                        <a href="mailto:uxuiocc@gmail.com?subject=" class="display-link">
-                            <img src="assets/mail.png"
-                                 alt="email"
-                                 class="footer-image" />
-                        </a>
-
-                        <!-- Discord -->
-                        <a href="https://discord.gg/MZJM7ctBs5"
-                           target="_blank"
-                           rel="noreferrer noopener"
-                           class="display-link">
-                            <img src="assets/discord.png"
-                                 alt="discord"
-                                 class="footer-image" />
-                        </a>
-
-                        <!-- Instagram -->
-                        <a href="https://www.instagram.com/uxuiocc/"
-                           target="_blank"
-                           rel="noreferrer noopener"
-                           class="display-link">
-                            <img src="assets/instagram.png"
-                                 alt="instagram"
-                                 class="footer-image" />
-                        </a>
-
-                    </div>
-                </div>
+                <img src="assets/hamburger.png"
+                     alt="menu"
+                     class="hamburgerlogo"
+                     onmouseover="this.src='assets/hamburgerh.png'"
+                     onmouseout="this.src='assets/hamburger.png'" />
+            </button>
+            <div>
+                <ul class="nav-items" id="nav-items">
+                    <li class="nav-link"><a href="#">Home</a></li>
+                    <li class="nav-link"><a href="#">About</a></li>
+                    <li class="nav-link"><a href="#">Contact</a></li>
+                </ul>
             </div>
         </div>
-    </body>
+    </nav>
+
+    <!----------x----------- Navigation ------------x--------->
+
+
+    <!------------ Main Section ------------>
+    <main>
+        <section class="site-title">
+            <div class="site-background">
+                <h3>We Are</h3>
+                <h1>UX/UI EXPLORERS</h1>
+                <button class="btn">Apply Now</button>
+            </div>
+        </section>
+    </main>
+
+    <!-----x------ Main Section ------x----->
+
+
+    <!------------ Footer ------------>
+    <div class="footer-container"></div>
+    <div class="footer">
+        <div class="social-links">
+
+
+            <!-------- Email -------->
+            <a href="mailto:uxuiocc@gmail.com?subject=" class="display-link">
+                <img src="assets/mail.png"
+                     alt="email"
+                     class="footer-image"
+                     onmouseover="this.src='assets/mailh.png'"
+                     onmouseout="this.src='assets/mail.png'" />
+            </a>
+
+            <!-------- Discord -------->
+            <a href="https://discord.gg/MZJM7ctBs5"
+               target="_blank"
+               rel="noreferrer noopener"
+               class="display-link">
+                <img src="assets/discord.png"
+                     alt="discord"
+                     class="footer-image"
+                     onmouseover="this.src='assets/discordh.png'"
+                     onmouseout="this.src='assets/discord.png'" />
+            </a>
+
+            <!-------- Instagram -------->
+            <a href="https://www.instagram.com/uxuiocc/"
+               target="_blank"
+               rel="noreferrer noopener"
+               class="display-link">
+                <img src="assets/instagram.png"
+                     alt="instagram"
+                     class="footer-image"
+                     onmouseover="this.src='assets/instagramh.png'"
+                     onmouseout="this.src='assets/instagram.png'" />
+            </a>
+        </div>
+    </div>
+
+    <!-----x------ Footer -----x------>
+
+
+    <!-- Jquery Javascript file -->
+    <script src="/js/Jquery3.6.0.min.js"></script>
+
+    <!-- Custom Javascript file -->
+    <script src="./js/main.js"></script>
+</body>
 </html>
