--- a/home.html
+++ b/home.html
@@ -9,24 +9,6 @@
     <title>UX/UI Explorers | Home</title>
 
     <!-- Custom Style-->
-    <style>
-        html {
-            font-family: Montserrat;
-            font-size: 18px;
-        }
-
-        body {
-            font-weight: 400;
-            font-style: normal;
-            text-decoration: none;
-            text-transform: none;
-            letter-spacing: normal;
-            line-height: 1.55;
-            color: var(--gray-black);
-            background-color: var(--white);
-            margin: 0;
-        }
-    </style>
     <link rel ="stylesheet" href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" />
     <link rel="stylesheet" href="css/style.css" />
@@ -38,33 +20,35 @@
     <!---------------------- Navigation ---------------------->
     <nav class="nav">
         <div class="nav-menu flex-row">
-            <div class="nav-brand">
-                <a href="#" class="text-gray">
-                    <img src="assets/uxuiTextLogo.png"
+            <div class="nav-brand">  
+                <a href="./home.html" 
+                    onmouseover="penlogo.src='assets/uxuiPenLogoh.png', textlogo.src='assets/uxuiTextLogoh.png'"
+                    onmouseout="penlogo.src='assets/uxuiPenLogo.png', textlogo.src='assets/uxuiTextLogo.png'">
+                    <img src="assets/uxuiTextLogo.png" id="textlogo"
                          alt="UX/UI Explorers"
-                         class="textlogo"
-                         onmouseover="this.src='assets/uxuiTextLogoh.png'"
-                         onmouseout="this.src='assets/uxuiTextLogo.png'" />
-                    <img src="assets/uxuiPenLogo.png"
+                         class="textlogo"/>
+                    <img src="assets/uxuiPenLogo.png" id="penlogo"
                          alt="UX/UI Explorers"
-                         class="penlogo"
-                         onmouseover="this.src='assets/uxuiPenLogoh.png'"
-                         onmouseout="this.src='assets/uxuiPenLogo.png'" />
+                         class="penlogo" />
+                    
                 </a>
-            </div>
-            <button class="hamburger" id="hamburger">
+                <!-------------- Hamburger Menu --------------->
+                <button class="hamburger" id="hamburger">
 
-                <img src="assets/hamburger.png"
-                     alt="menu"
-                     class="hamburgerlogo"
-                     onmouseover="this.src='assets/hamburgerh.png'"
-                     onmouseout="this.src='assets/hamburger.png'" />
-            </button>
-            <div>
-                <ul class="nav-items" id="nav-items">
-                    <li class="nav-link"><a href="#">Home</a></li>
-                    <li class="nav-link"><a href="#">About</a></li>
-                    <li class="nav-link"><a href="#">Contact</a></li>
+                    <img src="assets/hamburger.png"
+                         alt="menu"
+                         class="hamburgerlogo"
+                         onmouseover="this.src='assets/hamburgerh.png'"
+                         onmouseout="this.src='assets/hamburger.png'" />
+                </button>
+                <!-----------x------------------------------------x---------->
+            </div>
+            
+            <div class="nav-items" id="nav-items">
+                <ul class="nav-items-list" id="nav-items-list">
+                    <li class="nav-link"><a href="./home.html">Home</a></li>
+                    <li class="nav-link"><a href="./about.html">Who we are</a></li>
+                    <li class="nav-link"><a href="./contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -74,57 +58,87 @@
 
 
     <!------------ Main Section ------------>
+
     <main>
-        <section class="site-title">
+
+        <!------------ Site Title ------------>
+
+        <section class="site-title flex-row">
             <div class="site-background">
                 <h3>We Are</h3>
                 <h1>UX/UI EXPLORERS</h1>
-                <button class="btn">Apply Now</button>
+                <h4>UX/UI Explorers is a student-ran club all about design, <p>
+                    user experience, and user interface. Based at Orange Coast <p>
+                    College, we provide a space for any creative person to join<p> 
+                    us in events, workshops, and projects. Any skill level is welcomed.
+</h4>
+                <button class="btn"> <a href='./contact.html'>Explore Now</\a></button>
             </div>
         </section>
+
+        <!-----x------ Site Title ------x----->
+        <!------------ Objectives ------------>
+
+        <section>
+            <div class="cards">
+                <div class="container">
+                    <div class="card-content">
+                        <img src="./assets/designObj.png" class="card-image" alt="design">
+                    </div>
+                    <div class="card-content">
+                        <img src="./assets/innovateObj.png" class="card-image" alt="innovate">
+                    </div>
+                    <div class="card-content">
+                        <img src="./assets/collaborateObj.png" class="card-image" alt="collaborate">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-----x------ Objectives ------x----->
+
     </main>
 
     <!-----x------ Main Section ------x----->
 
 
     <!------------ Footer ------------>
-    <div class="footer-container"></div>
-    <div class="footer">
-        <div class="social-links">
+    <div class="footer-container">
+        <div class="footer">
+            <div class="social-links">
 
 
-            <!-------- Email -------->
-            <a href="mailto:uxuiocc@gmail.com?subject=" class="display-link">
-                <img src="assets/mail.png"
-                     alt="email"
-                     class="footer-image"
-                     onmouseover="this.src='assets/mailh.png'"
-                     onmouseout="this.src='assets/mail.png'" />
-            </a>
+                <!-------- Email -------->
+                <a href="mailto:uxuiocc@gmail.com?subject=">
+                    <img src="assets/mail.png"
+                         alt="email"
+                         class="footer-image"
+                         onmouseover="this.src='assets/mailh.png'"
+                         onmouseout="this.src='assets/mail.png'" />
+                </a>
 
-            <!-------- Discord -------->
-            <a href="https://discord.gg/MZJM7ctBs5"
-               target="_blank"
-               rel="noreferrer noopener"
-               class="display-link">
-                <img src="assets/discord.png"
-                     alt="discord"
-                     class="footer-image"
-                     onmouseover="this.src='assets/discordh.png'"
-                     onmouseout="this.src='assets/discord.png'" />
-            </a>
+                <!-------- Discord -------->
+                <a href="https://discord.gg/MZJM7ctBs5"
+                   target="_blank"
+                   rel="noreferrer noopener">
+                    <img src="assets/discord.png"
+                         alt="discord"
+                         class="footer-image"
+                         onmouseover="this.src='assets/discordh.png'"
+                         onmouseout="this.src='assets/discord.png'" />
+                </a>
 
-            <!-------- Instagram -------->
-            <a href="https://www.instagram.com/uxuiocc/"
-               target="_blank"
-               rel="noreferrer noopener"
-               class="display-link">
-                <img src="assets/instagram.png"
-                     alt="instagram"
-                     class="footer-image"
-                     onmouseover="this.src='assets/instagramh.png'"
-                     onmouseout="this.src='assets/instagram.png'" />
-            </a>
+                <!-------- Instagram -------->
+                <a href="https://www.instagram.com/uxuiocc/"
+                   target="_blank"
+                   rel="noreferrer noopener">
+                    <img src="assets/instagram.png"
+                         alt="instagram"
+                         class="footer-image"
+                         onmouseover="this.src='assets/instagramh.png'"
+                         onmouseout="this.src='assets/instagram.png'" />
+                </a>
+            </div>
         </div>
     </div>
 
